crates/test-ui/ui/extern_methods_invalid_type.stderr
error[E0277]: the trait bound `Box<i32>: Encode` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | /     extern_methods!(
  | |         #[unsafe(method(takesBox:))]
  | |         fn takes_box(&self, arg: Box<i32>);
  | |     );
  | |     ^
  | |     |
  | |_____the trait `Encode` is not implemented for `Box<i32>`
  |       required by a bound introduced by this call
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Box<i32>` to implement `EncodeArgument`
  = note: required for `Box<i32>` to implement `ConvertArgument`
  = note: required for `(Box<i32>,)` to implement `ConvertArguments`
note: required by a bound in `MsgSend::send_message`
 --> $WORKSPACE/crates/objc2/src/__macros/msg_send/retained.rs
  |
  |     unsafe fn send_message<A: ConvertArguments>(receiver: Receiver, sel: Sel, args: A) -> Return;
  |                               ^^^^^^^^^^^^^^^^ required by this bound in `MsgSend::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<MyObject>: RefEncode` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | /     extern_methods!(
  | |         #[unsafe(method(returnsReferenceToRetained))]
  | |         fn returns_reference_to_retained(&self) -> &Retained<Self>;
  | |     );
  | |_____^ the trait `RefEncode` is not implemented for `Retained<MyObject>`
  |
  = help: the following other types implement trait `RefEncode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AnyClass
            AnyObject
            AnyProtocol
            AtomicI16
          and $N others
  = note: required for `&Retained<MyObject>` to implement `Encode`
  = note: required for `&Retained<MyObject>` to implement `EncodeReturn`
  = note: required for `&Retained<MyObject>` to implement `ConvertReturn<MethodFamily<6>>`
  = note: required for `MethodFamily<6>` to implement `RetainSemantics<&MyObject, &Retained<MyObject>, KindSendMessage>`
  = note: required for `MethodFamily<6>` to implement `MsgSend<&MyObject, &Retained<MyObject>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MainThreadMarker: Encode` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | /     extern_methods!(
  | |         #[unsafe(method(mainThreadMarkerAsReturn))]
  | |         fn main_thread_marker_as_return() -> MainThreadMarker;
  | |     );
  | |_____^ the trait `Encode` is not implemented for `MainThreadMarker`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `MainThreadMarker` to implement `EncodeReturn`
  = note: required for `MainThreadMarker` to implement `ConvertReturn<MethodFamily<6>>`
  = note: required for `MethodFamily<6>` to implement `RetainSemantics<&AnyClass, MainThreadMarker, KindSendMessage>`
  = note: required for `MethodFamily<6>` to implement `MsgSend<&AnyClass, MainThreadMarker>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)
